--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>nz.co.senanque</groupId>
   <artifactId>schema-translator-maven-plugin</artifactId>
-  <version>0.0.2-SNAPSHOT</version>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <name>SchemaTranslatorMavenPlugin</name>
   <url>www.madurasoftware.com</url>
@@ -35,9 +35,9 @@
 		</developer>
 	</developers>
 	<scm>
-		<url>https://github.com/RogerParkinson/SchemaTranslatorMavenPlugin/trunk/</url>
-		<connection>scm:svn:https://github.com/RogerParkinson/SchemaTranslatorMavenPlugin/trunk/</connection>
-		<developerConnection>scm:svn:https://github.com/RogerParkinson/SchemaTranslatorMavenPlugin/trunk/</developerConnection>
+		<url>scm:git:git@github.com:RogerParkinson/SchemaTranslatorMavenPlugin.git</url>
+		<connection>scm:git:git@github.com:RogerParkinson/SchemaTranslatorMavenPlugin.git</connection>
+		<developerConnection>scm:git:git@github.com:RogerParkinson/SchemaTranslatorMavenPlugin.git</developerConnection>
 	</scm>
 	<issueManagement>
 		<system>GitHub</system>
@@ -132,6 +132,41 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.apache.maven.plugins
+										</groupId>
+										<artifactId>
+											maven-plugin-plugin
+										</artifactId>
+										<versionRange>
+											[3.2,)
+										</versionRange>
+										<goals>
+											<goal>descriptor</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 
 
